--- a/LucasAndre_XML/Ejercicios HTML/crfanta/contacta.html
+++ b/LucasAndre_XML/Ejercicios HTML/crfanta/contacta.html
@@ -11,6 +11,12 @@
 		<header>
         	<img src="images/logo.png" alt="Logo Fanta">
       		<h1>Nueva bebida refrescante</h1>
+            <nav>
+            	<ul>
+                	<li><a href="index.html">Presentación</a></li>
+                    <li><a href="contacta.html">Contacta</a></li>
+                </ul>
+            </nav>
         </header>
     	<form action="doc.php" method="get">
         	<label>Pon tu nombre</label>
