--- a/LucasAndre_XML/Ejercicios HTML/crfanta/index.html
+++ b/LucasAndre_XML/Ejercicios HTML/crfanta/index.html
@@ -9,6 +9,12 @@
     <header>
       <img src="images/logo.png" alt="Logo Fanta">
       <h1>Nueva bebida refrescante</h1>
+      <nav>
+            	<ul>
+                	<li><a href="index.html">Presentación</a></li>
+                    <li><a href="contacta.html">Contacta</a></li>
+                </ul>
+      </nav>
     </header>
     <nav>
       <ul>
